Todo-Liste erweitert
- Hinweis auf Canvas-Unterstuetzung in Canvas-Tag
- Beschreibung des Spiels mit Bild fuer Suchmaschinen
- Hinweis auf Javascript, wenn deaktiviert

--- a/index4.0.html
+++ b/index4.0.html
@@ -44,6 +44,9 @@
         x   Maussteuerung in Steuerung-Menue
         -   Google Analytics fuer die Online-Version
         -   Prozedurale Texturen
+        -   Hinweis auf Canvas-Unterstuetzung in Canvas-Tag
+        -   Beschreibung des Spiels mit Bild fuer Suchmaschinen
+        -   Hinweis auf Javascript, wenn deaktiviert
        (-   Lighting)
        (-   Statistik (Durchschn. Score, Schw., Schritte/Laenge, Gesamtschritte aller User))
        (-   Touch-Bedienung fuer Handy einfuegen)
