--- a/index4.0.html
+++ b/index4.0.html
@@ -6,6 +6,7 @@
     <script type="text/javascript" src="glMatrix-0.9.5.min.js"></script>
     <script type="text/javascript" src="webgl-utils.js"></script>
     <script type="text/javascript" src="jquery-1.11.1.min.js"></script>
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 
     <style type="text/css">
         @import url("snake.css");
