CSS fuer JavaScriptHinweis

--- a/index4.0.html
+++ b/index4.0.html
@@ -2243,8 +2243,10 @@
 
     <body>
         <div id="JavaScriptHinweis">
-            JavaScript ist deaktiviert.<br />
-            Bitte aktivieren Sie JavaScript in Ihren Browser-Einstellungen.
+            <div>
+                JavaScript ist deaktiviert.<br />
+                Bitte aktivieren Sie JavaScript in Ihren Browser-Einstellungen.
+            </div>
         </div>
 
         <canvas id="snakecanvas">
