--- a/index4.0.html
+++ b/index4.0.html
@@ -2247,6 +2247,7 @@
     </head>
 
     <body>
+        <!--
         <div id="JavaScriptHinweis">
             <div>
                 <div>
@@ -2254,7 +2255,7 @@
                     Bitte aktivieren Sie JavaScript in Ihren Browser-Einstellungen.
                 </div>
             </div>
-        </div>
+        </div>-->
 
         <canvas id="snakecanvas">
             Ihr Browser unterst&uuml;tzt das Canvas-Element nicht.<br />
