Total dummen Fehler korrigiert
Bug, dass in höheren Schwierigkeitsgraden die farbliche Unterteilung
nicht mehr korrekt war.

Es wurde die Mitte der Schlange fälschlicherweise anhand der Punktzahl
berechnet, nicht anhand der Schlangenlänge.

--- a/index4.0.html
+++ b/index4.0.html
@@ -1797,7 +1797,7 @@
                                                 Math.sin(degToRad(0.9*rotationAxis+120)), 
                                                 Math.sin(degToRad(1.1*rotationAxis-120))]);
                                 }
-                                else if(farbzaehler <= (punkte + 3) / 2)
+                                else if(farbzaehler <= aktLaengeSchlange / 2)
                                 {
                                     // Farb Puffer fuer Schlangen-Schwanz
                                     gl.bindBuffer(gl.ARRAY_BUFFER, tailVertexColorBuffer);
